# monarch-mcp-server

./: .gitignore  .mcpbignore  CLAUDE.md  MISSING_FEATURES.md  README.md  TEST_PLAN.md  TODO.md  login_setup.py  manifest.json  pyproject.toml  requirements.txt  server.json
.claude/skills/test-monarch-mcp/: SKILL.md
.claude/skills/test-monarch-mcp/references/: account-management.md  accounts-and-holdings.md  analytics-tools.md  auth-tools.md  budgets-and-cashflow.md  categories.md  read-only-tools.md  tag-crud.md  transaction-crud.md  transaction-details-and-splits.md  transaction-tagging.md  transactions-read.md
.github/workflows/: ci.yml  publish-mcp-registry.yml  publish-pypi.yml  publish-rc.yml  publish-testpypi.yml  publish.yml  release-mcpb.yml
docs/: authentication.md  releasing.md
src/monarch_mcp/: __init__.py  __main__.py  auth_server.py  secure_session.py  server.py
src/monarch_mcp_server/: __init__.py  auth_server.py  secure_session.py  server.py
tests/: conftest.py  test_account_management.py  test_accounts.py  test_auth_error_handling.py  test_auth_handler.py  test_auth_tools.py  test_budget_set.py  test_budgets_cashflow.py  test_categories.py  test_error_handling.py  test_read_tools.py  test_recurring.py  test_secure_session.py  test_server_edge_cases.py  test_tag_crud.py  test_transaction_crud.py  test_transaction_details.py  test_transaction_splits.py  test_transaction_tagging.py  test_transactions_read.py  test_write_mode.py
